--- a/k8s/crd/templates/v18.yaml
+++ b/k8s/crd/templates/v18.yaml
@@ -2248,6 +2248,51 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
+  name: clientprofiles.v18.sdp.appgate.com
+spec:
+  group: v18.sdp.appgate.com
+  names:
+    kind: ClientProfile
+    plural: clientprofiles
+    shortNames:
+    - cli
+    singular: clientprofile
+  scope: Namespaced
+  versions:
+  - name: v1
+    schema:
+      openAPIV3Schema:
+        properties:
+          spec:
+            properties:
+              exported:
+                format: date-time
+                type: string
+              hostname:
+                default: ''
+                type: string
+              identityProviderName:
+                type: string
+              name:
+                type: string
+              notes:
+                default: ''
+                type: string
+              tags:
+                items:
+                  type: string
+                type: array
+            required:
+            - name
+            - identityProviderName
+            type: object
+        type: object
+    served: true
+    storage: true
+---
+apiVersion: apiextensions.k8s.io/v1
+kind: CustomResourceDefinition
+metadata:
   name: clientconnections.v18.sdp.appgate.com
 spec:
   group: v18.sdp.appgate.com
@@ -2255,7 +2300,7 @@ spec:
     kind: ClientConnection
     plural: clientconnections
     shortNames:
-    - cli
+    - clt
     singular: clientconnection
   scope: Namespaced
   versions:
