Some extra updates to the CRDs

--- a/k8s/crd/templates/v18.yaml
+++ b/k8s/crd/templates/v18.yaml
@@ -962,8 +962,10 @@ spec:
                         default: ''
                         type: string
                       backgroundImage:
+                        default: ''
                         type: string
                       logo:
+                        default: ''
                         type: string
                       text:
                         default: ''
