--- a/k8s/crd/templates/v16.yaml
+++ b/k8s/crd/templates/v16.yaml
@@ -939,8 +939,10 @@ spec:
                         default: ''
                         type: string
                       backgroundImage:
+                        default: ''
                         type: string
                       logo:
+                        default: ''
                         type: string
                       text:
                         default: ''
