--- a/k8s/crd/templates/v17.yaml
+++ b/k8s/crd/templates/v17.yaml
@@ -922,8 +922,10 @@ spec:
                         default: ''
                         type: string
                       backgroundImage:
+                        default: ''
                         type: string
                       logo:
+                        default: ''
                         type: string
                       text:
                         default: ''
