--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 k8s/crd/templates/*.yaml linguist-generated=true
 tests/resources/crd/*/*.yaml linguist-generated=true
 tests/resources/entity/*/*.yaml linguist-generated=true
+resources/builtin/*/*.yaml linguist-generated=true
