--- a/tests/resources/test_entity.yaml
+++ b/tests/resources/test_entity.yaml
@@ -30,6 +30,8 @@ paths:
     $ref: '#/entity-test-file-complex'
   /entity-test-secret:
     $ref: '#/entity-test-secret'
+  /entity-test-secret-nested:
+    $ref: '#/entity-test-secret-nested'
   /entity-dep-1:
     $ref: '#/entity-dep-1'
   /entity-dep-2:
@@ -217,6 +219,21 @@ entity-test-secret:
         application/json:
           schema:
             $ref: '#/definitions/EntityTestSecret'
+
+entity-test-secret-nested:
+  get:
+    responses:
+      '200':
+        content:
+          application/json:
+            schema:
+              $ref: '#/definitions/EntityTestList'
+  post:
+    requestBody:
+      content:
+        application/json:
+          schema:
+            $ref: '#/definitions/EntityTestSecretNested'
 
 entity-dep-1:
   get:
@@ -560,6 +577,23 @@ definitions:
         format: password
         type: string
         writeOnly: true
+  EntityTestSecretNested:
+    type: object
+    properties:
+      passwordList:
+        type: array
+        items:
+          type: object
+          required:
+            - fieldOne
+          properties:
+            fieldOne:
+              type: string
+            password:
+              format: password
+              type: string
+              writeOnly: true
+              x-password-key: fieldOne
   EntityDep1:
     type: object
     properties:
