Add constraints to run python 3.10 pip-compile

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,8 @@
   "pip-compile": {
     "fileMatch": ["(^|/)requirements\\.in$"]
   },
-  "enabledManagers": ["pip-compile"]
+  "enabledManagers": ["pip-compile"],
+  "constraints": {
+    "python": "==3.10"
+  }
 }
