Update Dockerfile to run sdp-operator as non-root

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,15 +1,28 @@
 FROM python:3.11-slim
+
+WORKDIR /appgate
+USER root
+
 RUN apt-get update && \
     apt-get install gcc libffi-dev git --yes
-COPY requirements.txt /root/
-RUN python3 -m venv /root/venv && \
-    /root/venv/bin/pip install -r /root/requirements.txt && \
-    apt-get autoremove gcc --yes && \
-    rm -r /root/.cache && rm /root/requirements.txt
 
-COPY appgate /root/appgate/
-COPY api_specs /root/api_specs
-COPY docker/assets/run.sh /root/run.sh
-RUN chmod +x /root/run.sh
-WORKDIR /root
-ENTRYPOINT ["/root/run.sh"]
+COPY requirements.txt /appgate
+
+RUN python3 -m venv /appgate/venv && \
+    /appgate/venv/bin/pip install --upgrade pip && \
+    /appgate/venv/bin/pip install -r /appgate/requirements.txt
+
+RUN apt-get clean autoclean & \
+    apt-get autoremove --yes & \
+    rm -rf /var/lib/{apt,dpkg,cache,log}/ & \
+    rm /appgate/requirements.txt
+
+COPY appgate /appgate/appgate/
+COPY api_specs /appgate/api_specs
+COPY docker/assets/run.sh /appgate/run.sh
+RUN chmod +x /appgate/run.sh
+
+RUN useradd appgate --uid 1000 --user-group
+USER appgate
+
+ENTRYPOINT ["/appgate/run.sh"]
