Run appropriate cleanup commands

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,15 +5,15 @@ USER root
 
 RUN apt-get update && \
     apt-get install gcc libffi-dev git --yes && \
-    apt-get clean autoclean & \
-    apt-get autoremove --yes & \
-    rm -rf /var/lib/{apt,dpkg,cache,log}/
+    apt-get clean && \
+    apt-get autoclean
 
 COPY requirements.txt /appgate
 
 RUN python3 -m venv /appgate/venv && \
     /appgate/venv/bin/pip install --upgrade pip && \
     /appgate/venv/bin/pip install -r /appgate/requirements.txt && \
+    apt-get autoremove gcc --yes && \
     rm /appgate/requirements.txt
 
 COPY appgate /appgate/appgate/
