Single role, multiple rolebindings

--- a/k8s/operator/templates/rbac.yaml
+++ b/k8s/operator/templates/rbac.yaml
@@ -1,8 +1,8 @@
-{{- if has "sdp-operator" .Values.sdp.operators }}
+
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: {{ include "sdp-operator.fullname" . }}-sdp
+  name: {{ include "sdp-operator.fullname" . }}-role
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
@@ -30,15 +30,12 @@ rules:
       - clientconnections
       - serviceusers
       - clientprofiles
-{{- if .Values.sdp.sdpOperator.reverseMode }}
     verbs: ["get", "create", "patch", "watch", "list", "delete"]
-{{- else }}
-    verbs: ["get", "create", "patch", "watch", "list"]
-{{- end }}
   - apiGroups: [""]
     resources: ["configmaps"]
     verbs: ["get", "create", "list", "patch"]
 ---
+{{- if has "sdp-operator" .Values.sdp.operators }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -52,50 +49,15 @@ subjects:
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
-  name: {{ include "sdp-operator.fullname" . }}-sdp
+  name: {{ include "sdp-operator.fullname" . }}-role
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
 ---
 {{- if has "git-operator" .Values.sdp.operators }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
-metadata:
-  name: {{ include "sdp-operator.name" . }}-git
-  namespace: {{ .Release.Namespace }}
-  labels:
-  {{- include "sdp-operator.labels" . | nindent 4 }}
-rules:
-  - apiGroups: [ "{{ .Values.sdp.gitOperator.version }}.sdp.appgate.com"]
-    resources:
-      - policies
-      - entitlements
-      - conditions
-      - ringfencerules
-      - appliances
-      - sites
-      - ippools
-      - identityproviders
-      - localusers
-      - administrativeroles
-      - mfaproviders
-      - adminmfasettingss
-      - trustedcertificates
-      - criteriascriptss
-      - devicescripts
-      - entitlementscripts
-      - appliancecustomizations
-      - globalsettingss
-      - clientconnections
-      - serviceusers
-    verbs: ["get", "watch", "list"]
-  - apiGroups: [""]
-    resources: ["configmaps"]
-    verbs: ["get", "create", "list", "patch"]
----
-apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: {{ include "sdp-operator.name" . }}-git
+  name: {{ include "sdp-operator.fullname" . }}-git
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
@@ -105,6 +67,6 @@ subjects:
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
-  name: {{ include "sdp-operator.name" . }}-git
+  name: {{ include "sdp-operator.fullname" . }}-role
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
