Don't need libffi-dev as well

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,7 +6,7 @@ USER root
 COPY requirements.txt /appgate
 
 RUN apt-get update && \
-    apt-get install libffi-dev git --yes && \
+    apt-get install git --yes && \
     apt-get clean && \
     apt-get autoclean && \
     python3 -m venv /appgate/venv && \
