[SA-21814] Re-generated doc/values.md
readme-generator --values k8s/operator/values.yaml --readme doc/values.md

--- a/k8s/operator/values.yaml
+++ b/k8s/operator/values.yaml
@@ -85,6 +85,7 @@ sdp:
       hostname: ""
       sshPort: ""
       strictHostKeyChecking: true
+      protocl: https
 
     ## @param sdp.gitOperator.image.tag The image tag of the operator.
     ## @param sdp.gitOperator.image.pullPolicy The image pull policy of the operator.
