--- a/.github/workflows/build-push-image.yml
+++ b/.github/workflows/build-push-image.yml
@@ -1,53 +1,45 @@
 name: Build and Push Image
 
 on:
-  workflow_run:
-    workflows: [ "Build" ]
-    branches: [ "main" ]
-    types:
-      - completed
+  workflow_call:
+    inputs:
+      push:
+        type: boolean
+        required: true
 
 jobs:
   build-push-image:
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Get openspec API
-        run: ./bin/get-open-spec.sh
+
+      - name: Install unzip
+        run: sudo apt-get update && sudo apt-get install unzip
+
+      - name: Download OpenAPI Spec
         shell: bash
-      - uses: actions/upload-artifact@v2
-        with:
-          name: openspecs
-          path: /tmp/openspec-*.zip
-      - uses: actions/download-artifact@v2
-        with:
-          name: openspecs
-          path: /tmp
-      - name: install unzip
-        run: |
-          sudo apt-get update
-          sudo apt-get install unzip
-      - name: Get Open API spec
-        run: ./bin/unzip-open-spec.sh
-        shell: bash
+        run: make clean && make api_specs
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
+        if: ${{ inputs.push }}
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Get Operator app version
+
+      - name: Get Operator App Version
         id: operatorAppVersion
         uses: mikefarah/yq@master
         with:
           cmd: yq eval '.appVersion' k8s/operator/Chart.yaml
-      - name: Push image
+
+      - name: Build and Push Image
         uses: docker/build-push-action@v2
         with:
           context: .
           file: docker/Dockerfile
-          push: ${{ github.ref == 'refs/heads/main' }}
+          push: ${{ inputs.push }}
           tags: |
             ghcr.io/${{ github.repository }}/sdp-operator:${{ steps.operatorAppVersion.outputs.result }}
             ghcr.io/${{ github.repository }}/sdp-operator:latest
