--- a/.github/workflows/release-chart.yml
+++ b/.github/workflows/release-chart.yml
@@ -1,15 +1,10 @@
 name: Release Chart
 
 on:
-  workflow_run:
-    workflows: [ "Build and Push Image" ]
-    branches: [ "main" ]
-    types:
-      - completed
+  workflow_call:
 
 jobs:
   release:
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/main' }}
     permissions:
       contents: write
     runs-on: ubuntu-latest
