--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -13,10 +13,12 @@ jobs:
 
   release-chart:
     uses: ./.github/workflows/release-chart.yml
+    needs: build
     with:
       secrets: inherit
 
   releae-chart-oci:
     uses: ./.github/workflows/release-chart-oci.yml
+    needs: build
     with:
       secrets: inherit
