--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -9,16 +9,18 @@ jobs:
   build:
     uses: ./.github/workflows/build-push-image.yml
     with:
-      push: false
+      push: true
 
   release-chart:
     uses: ./.github/workflows/release-chart.yml
     needs: build
     with:
+      push: true
       secrets: inherit
 
   releae-chart-oci:
     uses: ./.github/workflows/release-chart-oci.yml
     needs: build
     with:
+      push: true
       secrets: inherit
