--- a/requirements-build.in
+++ b/requirements-build.in
@@ -1,8 +1,8 @@
-mypy==0.991
-mypy-extensions==0.4.3
-pytest==7.4.2
-black==22.3.0
+mypy ~= 0.990
+mypy-extensions ~= 0.4
+pytest ~= 7.0
+black ~= 22.0
 # type stubs
-types-PyYAML==6.0.1
-types-python-dateutil==2.8.19
-types-requests>=2.28.11.7
+types-PyYAML ~= 6.0
+types-python-dateutil ~= 2.0
+types-requests ~= 2.0
