--- a/k8s/operator/templates/git-operator-deployment.yaml
+++ b/k8s/operator/templates/git-operator-deployment.yaml
@@ -25,7 +25,7 @@ spec:
         runAsGroup: 1000
         fsGroup: 1000
         runAsNonRoot: true
-      serviceAccountName: {{ include "sdp-operator.serviceAccountName" . }}-git
+      serviceAccountName: {{ include "gitServiceAccountName" . }}
       volumes:
         - name: git-key
           secret:
