--- a/k8s/operator/templates/serviceaccount.yaml
+++ b/k8s/operator/templates/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "sdp-operator.serviceAccountName" .}}-sdp
+  name: {{ include "sdpServiceAccountName" . }}
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
@@ -12,7 +12,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "sdp-operator.serviceAccountName" .}}-git
+  name: {{ include "gitServiceAccountName" . }}
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
