--- a/k8s/operator/templates/serviceaccount.yaml
+++ b/k8s/operator/templates/serviceaccount.yaml
@@ -1,4 +1,5 @@
 {{- if has "sdp-operator" .Values.sdp.operators }}
+{{- if .Values.sdp.sdpOperator.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -7,8 +8,10 @@ metadata:
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
 {{- end }}
+{{- end }}
 ---
 {{- if has "git-operator" .Values.sdp.operators }}
+{{- if .Values.sdp.gitOperator.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -16,4 +19,5 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
+{{- end }}
 {{- end }}
