--- a/k8s/operator/templates/rbac.yaml
+++ b/k8s/operator/templates/rbac.yaml
@@ -1,4 +1,4 @@
-
+{{- if or .Values.sdp.sdpOperator.rbac.create .Values.sdp.gitOperator.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
@@ -34,8 +34,10 @@ rules:
   - apiGroups: [""]
     resources: ["configmaps"]
     verbs: ["get", "create", "list", "patch"]
+{{- end }}
 ---
 {{- if has "sdp-operator" .Values.sdp.operators }}
+{{- if .Values.sdp.sdpOperator.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -52,8 +54,10 @@ roleRef:
   name: {{ include "sdp-operator.fullname" . }}-r
   apiGroup: rbac.authorization.k8s.io
 {{- end }}
+{{- end }}
 ---
 {{- if has "git-operator" .Values.sdp.operators }}
+{{- if .Values.sdp.gitOperator.rbac.create }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
@@ -69,4 +73,5 @@ roleRef:
   kind: Role
   name: {{ include "sdp-operator.fullname" . }}-role
   apiGroup: rbac.authorization.k8s.io
+{{- end }}
 {{- end }}
