--- a/k8s/operator/templates/rbac.yaml
+++ b/k8s/operator/templates/rbac.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
   {{- include "sdp-operator.labels" . | nindent 4 }}
 rules:
-  - apiGroups: [ "{{ .Values.sdp.sdpOperator.version }}.sdp.appgate.com" ]
+  - apiGroups: [ "{{ .Values.sdp.version }}.sdp.appgate.com" ]
     resources:
       - policies
       - entitlements
