Allow to override the security context for the deployments

--- a/k8s/operator/templates/sdp-operator-deployment.yaml
+++ b/k8s/operator/templates/sdp-operator-deployment.yaml
@@ -20,11 +20,10 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- if not (empty .Values.sdp.sdpOperator.securityContext) }}
       securityContext:
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
-        runAsNonRoot: true
+       {{- toYaml .Values.sdp.sdpOperator.securityContext | nindent 8 }}
+      {{- end }}
       serviceAccountName: {{ include "sdpServiceAccountName" . }}
       containers:
         - name: {{ .Chart.Name }}-sdp
