--- a/k8s/operator/templates/git-operator-deployment.yaml
+++ b/k8s/operator/templates/git-operator-deployment.yaml
@@ -105,6 +105,10 @@ spec:
             - name: GIT_KEY_FINGERPRINT_PATH_ENV
               value: {{ .Values.sdp.gitOperator.git.sshKeyFingerprintPath }}
             {{- end}}
+            {{- if .Values.sdp.gitOperator.git.clonePath }}
+            - name: GIT_DUMP_PATH_ENV
+              value: {{ .Values.sdp.gitOperator.git.clonePath }}
+            {{- end}}
             {{- if .Values.sdp.externalSecret.enabled }}
             - name: APPGATE_SECRET_SOURCE
               value: {{ .Values.sdp.externalSecret.type }}
